# Streaming-DMD

./: pyproject.toml  readme.md  setup.py
examples/: example_01_sDMD_basic.ipynb
sDMD/: __init__.py  sDMD.py  utilities.py
