[tool.poetry]
name = "streaming-dmd"
version = "1.1"
description = "Streaming Dynamic Mode Decomposition"
authors = ["Jaime <jaimeliew1@gmail.com>"]
license = "MIT"
packages = [{ include = "sDMD" }]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
